<resources>
    <string name="app_name">می باس</string>
    <string name="action_settings">Settings</string>
    <string name="title0">پاسخ به سوالات</string>
    <string name="title1">مسیر ویژه</string>
    <string name="title2">سرویس ها</string>
    <string name="title3">دربستی</string>
    <string name="title4">رانندگان و وسایل نقلیه</string>
    <string name="title5">محیط کاربری</string>
    <string name="title6">مسیرها</string>
    <string name="title7">تورها</string>
    <string name="title8">پذیرایی</string>
    <string name="tv_date">۱۳ / مرداد / ۱۳۹۷</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_logout">خروج از حساب</string>
    <string name="label_messages">پیام ها</string>
    <string name="label_service">سرویس ها و مسیرها</string>
    <string name="demo_driver_name">محمد مهدی فلانی</string>
    <string name="delete">حذف</string>
    <string name="demo_phone_no">0912123123</string>
    <string name="demo_food">ساندویج مرغ و سالاد</string>
    <string name="demo_food2">نوع: گرم</string>
    <string name="demo_bus">مینی بوس هیوندای</string>
    <string name="demo_bus2">سفید رنگ</string>
    <string name="demo_way">مقصد: میدان آزادی</string>
    <string name="demo_way2">وسیله نقلیه: مینی بوس هیوندای</string>
    <string name="demo_tour">تور صحرای مصر</string>
    <string name="demo_tour2">تور 20 روزه صحرا به همراه شام و سافاری</string>
</resources>
