<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="-56dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="ContentDescription" />

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            app:shape_arc_height="30dp"
            app:shape_arc_position="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="#a0FD820A"
                android:maxHeight="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fourbus"
                tools:ignore="ContentDescription" />

        </com.github.florent37.shapeofview.shapes.ArcView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            app:elevation="15dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="-100dp"
                android:src="@drawable/ic_edit_black_24dp"
                app:backgroundTint="@color/semiblack"
                app:fabSize="normal" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/msg_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_mail_outline_black_24dp"
                app:backgroundTint="@color/semiblack"
                app:fabSize="normal" />
        </FrameLayout>

        <com.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-80dp"
            android:elevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#111"
                android:contentDescription="@string/app_name"
                android:src="@drawable/demo_avatar" />
        </com.github.florent37.shapeofview.shapes.CircleView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="محمد مهدی فلانی"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="شماره تماس"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="۰۹۱۲۳۴۵۶۷۸۹"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="تاریخ تولد"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#ce471d"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/btn_logout"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
